# crypto_list

./: Dockerfile  README.md  crypto_list.py  pyproject.toml  requirements.txt
crypto_list/: __init__.py  app.py  dialogs.py  storage.py  ui_tk.py  webapp.py
crypto_list/web/: app.js  index.html  style.css
